--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About SkillMorphix</title>
+  <link rel="icon" href="favicon.jpg" type="image/x-icon">
   <meta name="description" content="Learn about our mission to bridge the digital divide in education">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
