--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkillMorphix - Personalized Learning</title>
+  <link rel="icon" href="favicon.jpg" type="image/x-icon">
   <meta name="description" content="AI-Powered Learning Platform for Underprivileged Students">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
